src/lib/*eshell*
Welcome to the Emacs shell

~/Documents/C Group Project/arm11_42/src/lib $ gcc -Wall loadFile.c -o loadFile
loadFile.c: In function ‘main’:
loadFile.c:87:20: warning: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   87 |   int *registers = *startRegisters();
      |                    ^
loadFile.c:88:31: warning: pointer targets in passing argument 2 of ‘fetch’ differ in signedness [-Wpointer-sign]
   88 |   printf("%d",fetch(registers,memory));
      |                               ^~~~~~
      |                               |
      |                               uint32_t * {aka unsigned int *}
loadFile.c:67:32: note: expected ‘int *’ but argument is of type ‘uint32_t *’ {aka ‘unsigned int *’}
   67 | int fetch(int *registers, int *memory){
      |                           ~~~~~^~~~~~
~/Documents/C Group Project/arm11_42/src/lib $ gcc -Wall loadFile.c -o loadFile
loadFile.c: In function ‘main’:
loadFile.c:87:25: warning: initialization of ‘uint32_t *’ {aka ‘unsigned int *’} from ‘uint32_t’ {aka ‘unsigned int’} makes pointer from integer without a cast [-Wint-conversion]
   87 |   uint32_t *registers = *startRegisters();
      |                         ^
~/Documents/C Group Project/arm11_42/src/lib $ gcc -Wall loadFile.c -o loadFile
~/Documents/C Group Project/arm11_42/src/lib $ gcc ./loadFile.c 
~/Documents/C Group Project/arm11_42/src/lib $ gcc -Wall loadFile.c -o loadFile
~/Documents/C Group Project/arm11_42/src/lib $ gcc ./loadFile.c 
~/Documents/C Group Project/arm11_42/src/lib $ gcc -Wall loadFile.c -o loadFile
~/Documents/C Group Project/arm11_42/src/lib $ gcc ./loadFile.c 
~/Documents/C Group Project/arm11_42/src/lib $ gcc -Wall loadFile.c -o loadFile
~/Documents/C Group Project/arm11_42/src/lib $ gcc ./loadFile.c 
~/Documents/C Group Project/arm11_42/src/lib $ gcc -Wall loadFile.c -o loadFile
loadFile.c: In function ‘main’:
loadFile.c:90:11: error: expected ‘;’ before ‘}’ token
   90 |   return 0
      |           ^
      |           ;
   91 |  }
      |  ~         
~/Documents/C Group Project/arm11_42/src/lib $ gcc -Wall loadFile.c -o loadFile
~/Documents/C Group Project/arm11_42/src/lib $ gcc ./loadFile.c 
~/Documents/C Group Project/arm11_42/src/lib $ gcc -Wall loadFile.c -o loadFile
~/Documents/C Group Project/arm11_42/src/lib $ gcc ./loadFile.c 
~/Documents/C Group Project/arm11_42/src/lib $ gcc ./loadFile.c add01
/usr/bin/ld:add01: file format not recognized; treating as linker script
/usr/bin/ld:add01:1: syntax error
collect2: error: ld returned 1 exit status
~/Documents/C Group Project/arm11_42/src/lib $ gcc -Wall loadFile.c -o loadFile
~/Documents/C Group Project/arm11_42/src/lib $ gcc ./loadFile.c add01
/usr/bin/ld:add01: file format not recognized; treating as linker script
/usr/bin/ld:add01:1: syntax error
collect2: error: ld returned 1 exit status
~/Documents/C Group Project/arm11_42/src/lib $ gcc -Wall -pedantic loadFile.c -o loadFile
~/Documents/C Group Project/arm11_42/src/lib $ gcc -Wall -pedantic -Werror loadFile.c -o loadFile
~/Documents/C Group Project/arm11_42/src/lib $ gcc ./loadFile
/usr/bin/ld: /usr/lib/gcc/x86_64-linux-gnu/9/../../../x86_64-linux-gnu/Scrt1.o: in function `_start':
(.text+0x24): undefined reference to `main'
collect2: error: ld returned 1 exit status
~/Documents/C Group Project/arm11_42/src/lib $ 
~/Documents/C Group Project/arm11_42/src/lib $ gcc ./loadFile add01
/usr/bin/ld:add01: file format not recognized; treating as linker script
/usr/bin/ld:add01:1: syntax error
collect2: error: ld returned 1 exit status
~/Documents/C Group Project/arm11_42/src/lib $ ./loadFile add01
Register[0] contains 0
Register[1] contains 0
Register[2] contains 0
Register[3] contains 0
Register[4] contains 0
Register[5] contains 0
Register[6] contains 0
Register[7] contains 0
Register[8] contains 0
Register[9] contains 0
Register[10] contains 0
Register[11] contains 0
Register[12] contains 0
Register[13] contains 0
Register[14] contains 0
segmentation fault (core dumped)
~/Documents/C Group Project/arm11_42/src/lib $ gcc -Wall -pedantic -Werror loadFile.c -o loadFile
loadFile.c: In function ‘main’:
loadFile.c:87:13: error: unused variable ‘registers’ [-Werror=unused-variable]
   87 |   uint32_t *registers = startRegisters();
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
~/Documents/C Group Project/arm11_42/src/lib $ gcc -Wall loadFile.c -o loadFile